sample/asm/errors/global_rs_used_in_lib.asm
.function: foo
    ress global
    return
.end
